add an explicit dependency libraries to microfrontends and a common dependency to latter

--- a/apps/shell/src/assets/module-federation.manifest.json
+++ b/apps/shell/src/assets/module-federation.manifest.json
@@ -1,4 +1,4 @@
 {
-  "mfe1": "http://localhost:4201/remoteEntry.mjs",
-  "mfe2": "http://localhost:4202/remoteEntry.mjs"
+  "mfe1": "http://localhost:4201/",
+  "mfe2": "http://localhost:4202/"
 }
